Cleaned up a little

--- a/Zach/Tagging/Meta Reader/Browse.ipynb
+++ b/Zach/Tagging/Meta Reader/Browse.ipynb
@@ -496,7 +496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HTML('''<html>\n",
+    "#HTML('''<html>\n",
+    "'''\n",
     "<body>\n",
     "<script>\n",
     "function isEmpty(obj) {\n",
@@ -636,7 +637,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display = '''<!DOCTYPE html>\n",
+    "#display = '''<!DOCTYPE html>\n",
+    "'''\n",
     "<html>\n",
     "<head>\n",
     "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
@@ -752,7 +754,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HTML(display)"
+    "#HTML(display)"
    ]
   },
   {
@@ -761,7 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HTML('<html><a href=\"/home/zachary.selk/git/Callysto/Zach/Tagging/WhoExtension/main.js\">Click</a></html>')"
+    "#HTML('<html><a href=\"/home/zachary.selk/git/Callysto/Zach/Tagging/WhoExtension/main.js\">Click</a></html>')"
    ]
   }
  ],
