--- a/Zach/Tagging/metadata/Testing/test.ipynb
+++ b/Zach/Tagging/metadata/Testing/test.ipynb
@@ -10,9 +10,9 @@
  ],
  "metadata": {
   "info": {
-   "Grade": "3",
-   "Subject": "",
-   "Summary": ""
+   "Grade": "hello ",
+   "Subject": "world",
+   "Summary": "This is a test\"}] cell [ \"alert('hello world')"
   },
   "kernelspec": {
    "display_name": "Python 3",
