--- a/Zach/Tagging/metadata/setup/Untitled.ipynb
+++ b/Zach/Tagging/metadata/setup/Untitled.ipynb
@@ -2,47 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Symlinking: /home/zachary.selk/.local/share/jupyter/nbextensions/metadata -> /home/zachary.selk/git/Callysto/Zach/Tagging/metadata\n",
       "\n",
       "    To initialize this nbextension in the browser every time the notebook (or other app) loads:\n",
       "    \n",
       "          jupyter nbextension enable <the entry point> --user\n",
       "    \n",
-      "Enabling notebook extension help_panel/help_panel...\n",
-      "      - Validating: \u001b[32mOK\u001b[0m\n"
+      "Enabling notebook extension metadata/metadata...\n",
+      "      - Validating: problems found:\n",
+      "        - require? \u001b[31m X\u001b[0m metadata/metadata\n"
      ]
     }
    ],
    "source": [
     "# Activate \n",
-    "!cd ../../ && jupyter nbextension install help_panel/ --user --symlink &&jupyter nbextension enable help_panel/help_panel --user\n",
-    "#!cd help_panel/setup"
+    "!cd ../../ && jupyter nbextension install metadata/ --user --symlink && jupyter nbextension enable metadata/metadata --user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Disabling notebook extension help_panel/help_panel...\n",
+      "Disabling notebook extension metadata/metadata...\n",
       "      - Validating: \u001b[32mOK\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "# Deactivate\n",
-    "!cd ../../ && jupyter nbextension disable help_panel/help_panel --user\n",
-    "#!cd help_panel/setup"
+    "!cd ../../ && jupyter nbextension disable metadata/metadata --user"
    ]
   }
  ],
