--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -2,41 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Hello world"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
+    "# Install Dependencies\n",
     "!pip install requests --user\n",
     "!pip install beautifulsoup4 --user\n",
     "!pip install tqdm --user\n",
@@ -64,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:13<00:00, 110.31it/s]\n"
+      "100%|██████████| 1482/1482 [00:15<00:00, 96.21it/s]\n"
      ]
     }
    ],
@@ -81,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37417ef501f34cfe840a93a8b0305f9e",
+       "model_id": "82aebb30719b4a399fd7d057a061e1cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3329e78228a47ef8f9d7367f5798371",
+       "model_id": "0b848ef0927643338e9f4b6610be3c29",
        "version_major": 2,
        "version_minor": 0
       },
