Areas and Banners Added

--- a/Nicole/Parallelogram_Area.ipynb
+++ b/Nicole/Parallelogram_Area.ipynb
@@ -4,11 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![logo](https://callysto.ca/wp-content/uploads/2018/06/Callysto_Notebook-Banner_Top_06.06.18.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Area of a Parallelogram\n",
     "\n",
     "### Recall what a Parallelogram is\n",
     "\n",
-    "A parallelogram is a four sided shape where both pair of sides and parallel like this\n",
+    "A parallelogram is a four sided shape where both pair of sides are parallel like this\n",
     "\n",
     "![picture](https://www.mathsisfun.com/images/quadrilateral-parallelogram.gif)\n",
     "\n",
@@ -17,7 +24,7 @@
     "### How to find the area\n",
     "\n",
     "Since we know a rectangle is a type of parallelogram, let's recall the area of a rectangle: $$base \\times height$$\n",
-    "Can we just use this formula for all parallelograms? Actually, yes we can! This is because of the fact that parallelograms have to have parallel sides, therefore "
+    "Can we just use this formula for all parallelograms? Actually, yes we can! This is because of the fact that parallelograms have to have parallel sides."
    ]
   },
   {
@@ -28,11 +35,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Calculate Area\n",
+    "\n",
+    "Let's try a few examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How does changing the base change the area?\n",
+    "\n",
+    "### How does changing the height change the area?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            require.config({\n",
+       "                paths: {\n",
+       "                    ggb: \"https://cdn.geogebra.org/apps/deployggb\"\n",
+       "                }\n",
+       "            });\n",
+       "\n",
+       "            require([\"ggb\"]);\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"ggb_0_0e\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "var ggb_0_0e = new GGBApplet({\"material_id\": \"fWJgvr7C\"}, \"ggb_0_0e\", false); ggb_0_0e.inject(); "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ggb import *\n",
+    "ggb = GGB()\n",
+    "\n",
+    "ggb.material('fWJgvr7C').draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![logo](https://callysto.ca/wp-content/uploads/2018/06/Callysto_Notebook-Banners_Bottom_06.06.18.jpg)"
+   ]
   }
  ],
  "metadata": {
