Added Intros and Conclusions

--- a/Nicole/Triangle_Area.ipynb
+++ b/Nicole/Triangle_Area.ipynb
@@ -108,21 +108,25 @@
    "source": [
     "# Area of a Triangle\n",
     "\n",
-    "## Introduction\n",
+    "##### Grade 7 Curriculum\n",
+    "\n",
+    "This is a notebook on how to calculate the area of a triangle. In this notebook, our primary focus will be to develop a formula for calculating the area of any triangle as well as how to find out the length of one variable while given the other variable and the area. \n",
+    "\n",
+    "This notebook will help you gain a conceptual understanding of the area of a triangle while developing mechanical proficiency in performing these calculations. (But beware that one notebook is not enough! You will need plenty of practice before you master this topic.)\n",
     "\n",
     "### What is a triangle?\n",
     "\n",
     "A triangle is defined as a 2D shape with 3 straight sides and 3 angles, which can take many forms:\n",
     "\n",
-    "![picture](https://www.onlinemathlearning.com/image-files/xtypes-triangles-sides-angles.png.pagespeed.ic.LLzsGQR2vg.png) onlinemathlearning.com\n",
+    "![picture](https://www.onlinemathlearning.com/image-files/xtypes-triangles-sides-angles.png.pagespeed.ic.LLzsGQR2vg.png) www.onlinemathlearning.com\n",
     "\n",
     "### How to find the area\n",
     "\n",
-    "Finding the area of a trianlge seems a little more tricky than finding the area of a rectangle, but there's an easy way to visualize it.\n",
+    "Finding the area of a triangle seems a little more tricky than finding the area of a rectangle, but there's an easy way to visualize it.\n",
     "\n",
     "As you can see in the picture below, a right angle triangle is created by cutting a rectangle diagonally in half, therefore the area of the triangle is half of the area of the rectangle. Since the area of a rectangle is $base \\times height$, the area of a triangle would be $\\frac{base \\times height}{2}$ or sometimes written as $\\frac{1}{2} \\times base \\times height$ though they both mean the same thing.\n",
     "\n",
-    "![picture2](https://www.homeschoolmath.net/teaching/g/area/area_right_triangl4.gif) homeschoolmath.net\n",
+    "![picture2](https://www.homeschoolmath.net/teaching/g/area/area_right_triangl4.gif) www.homeschoolmath.net\n",
     "\n",
     "### What about non-right angle triangles?\n",
     "\n",
@@ -130,15 +134,15 @@
     "\n",
     "Although non-right angled triangles look like they aren't created out of cutting a rectangle, it is still possible to double the triangle to get a parallelogram which we know from the [Area of a Parallelogram notebook](Parallelogram_Area.ipynb) has the same area as a rectangle, like this:\n",
     "\n",
-    "![animation with words](https://i.gifer.com/9VFS.gif) Tom Richmond\n",
+    "![animation with words](https://i.gifer.com/9VFS.gif) http://people.wku.edu/tom.richmond/triangle1.html\n",
     "\n",
     "We can also create rectangles out of non-right angle triangles by doubling the triangle then moving the extended bit to the other side like this:\n",
     "\n",
-    "![animation](https://upload.wikimedia.org/wikipedia/commons/6/6d/Triangle_area.gif) wikimedia.org\n",
+    "![animation](https://upload.wikimedia.org/wikipedia/commons/6/6d/Triangle_area.gif) www.wikimedia.org\n",
     "\n",
     "Or if you don't want to double the triangle in the first place and only work with the original area, we can create a rectangle by folding up the points on either side in like this:\n",
     "\n",
-    "![animation3](http://people.wku.edu/tom.richmond/triangle.gif) Tom Richmond\n",
+    "![animation3](http://people.wku.edu/tom.richmond/triangle.gif) http://people.wku.edu/tom.richmond/triangle2.html\n",
     "\n",
     "### Formula\n",
     "\n",
@@ -1040,7 +1044,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "## Conclusion\n",
+    "\n",
+    "Let's review what we've learned in this notebook.\n",
+    "\n",
+    "- The area of a triangle is half the area of a rectangle with the same base and height.\n",
+    "- The formula is $Area = \\frac{base \\times height}{2}$\n",
+    "- The formula works for all types of triangles as long as you know base and height.\n",
+    "- The formula works for finding any variable that is missing by rearanging values on either side of the equals sign.\n",
+    "- There's more than one way to calculate the area.\n",
+    "\n",
+    "Take the time to learn this formula and how to fill it in. You may not always have the formula to read, but filling in and manipulating equations like this formula will be essential for many math skills in the future. As always in mathematics, the more you practice, the easier it gets!"
    ]
   },
   {
