Solutions now working

--- a/Nathan/combinations/Combinations.ipynb
+++ b/Nathan/combinations/Combinations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -199,7 +199,7 @@
        "<div style=\"clear: both;\"></div>\n",
        "<div id=\"table-buttons-div\">\n",
        "    <input id=\"submit-table-button\" type=\"button\" value=\"Submit answers\" onclick=\"checkTable()\">\n",
-       "    <input id=\"show-table-solutions-button\" style=\"display:none\" type=\"button\" value=\"Show Solutions\" onclick=\"showTableSolutions()\">\n",
+       "    <input id=\"show-table-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show Solutions\" onclick=\"showTableSolutions()\">\n",
        "</div>\n",
        "<div id=\"detailed-table-solutions\">\n",
        "    \n",
@@ -228,7 +228,7 @@
     "<div style=\"clear: both;\"></div>\n",
     "<div id=\"table-buttons-div\">\n",
     "    <input id=\"submit-table-button\" type=\"button\" value=\"Submit answers\" onclick=\"checkTable()\">\n",
-    "    <input id=\"show-table-solutions-button\" style=\"display:none\" type=\"button\" value=\"Show Solutions\" onclick=\"showTableSolutions()\">\n",
+    "    <input id=\"show-table-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show Solutions\" onclick=\"showTableSolutions()\">\n",
     "</div>\n",
     "<div id=\"detailed-table-solutions\">\n",
     "    \n",
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the solutions to the table above is simply pascals triangle. \n",
+    "As we can see, the solutions to the table above is simply pascals triangle! \n",
     "\n",
     "## Combinations in action\n",
     "\n",
@@ -316,8 +316,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -326,11 +328,14 @@
        "<div id=\"combination-exercises-container\">\n",
        "    \n",
        "</div>\n",
-       "<div id=\"combination-exercises-buttons-container\">\n",
-       "    <input id=\"submit-exercises-button\" type=\"button\" value=\"Submit buttons\" onclick=\"checkExercises()\">\n",
-       "    <input id=\"show-exercise-solutions-button\" type=\"button\" value=\"Show solutions\" onclick=\"showExerciseSolutions()\"\n",
+       "<div id=\"combination-exercises-buttons-container\" class=\"clear-floats\">\n",
+       "    <input id=\"submit-exercises-button\" type=\"button\" value=\"Submit answers\" onclick=\"checkExercises()\">\n",
+       "    <input id=\"show-exercise-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show solutions\" onclick=\"showExerciseSolutions()\"\n",
+       "    <p id=\"exercise-error-message\" class=\"hidden\"></p>\n",
        "</div>\n",
+       "<div id=\"combination-exercises-solutions-container\">\n",
        "\n",
+       "</div>\n",
        "<script src=\"./js/create_exercises.js\"></script>"
       ],
       "text/plain": [
@@ -347,9 +352,10 @@
     "<div id=\"combination-exercises-container\">\n",
     "    \n",
     "</div>\n",
-    "<div id=\"combination-exercises-buttons-container\">\n",
-    "    <input id=\"submit-exercises-button\" type=\"button\" value=\"Submit buttons\" onclick=\"checkExercises()\">\n",
-    "    <input id=\"show-exercise-solutions-button\" type=\"button\" value=\"Show solutions\" onclick=\"showExerciseSolutions()\"\n",
+    "<div id=\"combination-exercises-buttons-container\" class=\"clear-floats\">\n",
+    "    <input id=\"submit-exercises-button\" type=\"button\" value=\"Submit answers\" onclick=\"checkExercises()\">\n",
+    "    <input id=\"show-exercise-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show solutions\" onclick=\"showExerciseSolutions()\"\n",
+    "    <p id=\"exercise-error-message\" class=\"hidden\"></p>\n",
     "</div>\n",
     "<div id=\"combination-exercises-solutions-container\">\n",
     "\n",
